--- a/.github/workflows/appspec.yml
+++ b/.github/workflows/appspec.yml
@@ -1,3 +1,4 @@
+on: push
 # This is an appspec.yml template file for use with AWS CodeDeploy.
 # The lines in this template starting with the hashtag symbol are 
 #   instructional comments and can be safely left in the file or 
@@ -77,4 +78,3 @@ hooks:
     - location: scripts/application_start.sh
       timeout: 300
       runas: ubuntu
-      
