--- a/.github/workflows/appspec.yml
+++ b/.github/workflows/appspec.yml
@@ -2,7 +2,11 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/nodejs
+    destination: /home/ec2-user/app
+permissions:
+  - object: /home/ec2-user/app
+    owner: ec2-user
+    group: ec2-user
 hooks:
   BeforeInstall:
     - location: scripts/before_install.sh
