--- a/appspec.yml
+++ b/appspec.yml
@@ -20,3 +20,8 @@ hooks:
     - location: scripts/application_start.sh
       timeout: 300
       runas: ubuntu
+  ApplicationStop:
+    - location: scripts/application_stop.sh
+
+timeout: 300
+runas: root
