--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -10,8 +10,8 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.ACCESS_KEY}}
-        aws-secret-access-key: ${{ secrets.ACEBOOK_SECRETS }}
+        aws-access-key-id: ${{ secrets.AWSACCESS_KEY}}
+        aws-secret-access-key: ${{ secrets.AWSSECRET_KEY }}
         # aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }} # if you have/need it
         aws-region: eu-west-2
 
