--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,3 +35,22 @@ jobs:
       with: 
         start: npm run start:test
         wait-on: http://localhost:3030
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWSACCESS_KEY}}
+        aws-secret-access-key: ${{ secrets.AWSSECRET_KEY }}
+        # aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }} # if you have/need it
+        aws-region: eu-west-2
+
+    - name: Copy files to the production website with the AWS CLI
+      run: | 
+        rm -rf node_modules
+        zip -r acebook.zip .
+        aws s3 sync . s3://emily-acebook
