--- a/appspec.yml
+++ b/appspec.yml
@@ -14,7 +14,7 @@ permissions:
       - file
 hooks:
   ApplicationStart:
-    - location: aws_scripts/start_server
+    - location: scripts/start_app.sh
       timeout: 3600
   ApplicationStop:
     - location: aws_scripts/stop_server
