--- a/appspec.yml
+++ b/appspec.yml
@@ -13,6 +13,10 @@ permissions:
       - directory
       - file
 hooks:
+  BeforeInstall:
+    - location: aws_scripts/install_dependencies
+      timeout: 300
+      runas: root
   ApplicationStart:
     - location: aws_scripts/start_server
       timeout: 3600
