--- a/appspec.yml
+++ b/appspec.yml
@@ -1,49 +1,18 @@
 version: 0.0
 os: linux
+
 files:
- - source: .
-   destination: /home/ec2-user/emily-acebook
-permissions:
-  - object: /home/ec2-user
-    owner: ec2-user
-    group: ec2-user
-    type:
-      - directory
-      - file
+  - source: /
+    destination: /code
+
 hooks:
-  ApplicationStart:
-    - location: scripts/reload-pm2.sh
+  BeforeInstall:
+    - location: aws_scripts/install_dependencies
       timeout: 300
       runas: root
-version: 0.0
-
-# os: linux
-
-# files:
-#   - source: /
-#     destination: /home/ec2-user/emily-acebook
-
-# permissions:
-#   - object: /home/ec2-user
-#     owner: ec2-user
-#     group: ec2-user
-#     type:
-#       - directory
-#       - file
-# hooks:
-#   BeforeInstall:
-#     - location: aws_scripts/install_dependencies
-#       timeout: 300
-#       runas: root
-#   ApplicationStart:
-#     - location: aws_scripts/start_server
-#       timeout: 3600
-#   ApplicationStop:
-#     - location: aws_scripts/stop_server
-#       runas: root
-
-
-  # ApplicationStart:
-  #   - location: scripts/reload-pm2.sh
-  #     timeout: 300
-  #     runas: root
+  ApplicationStart:
+    - location: aws_scripts/start_server
+      timeout: 3600
+  ApplicationStop:
+    - location: aws_scripts/stop_server
+      runas: root
