--- a/appspec.yml
+++ b/appspec.yml
@@ -1,17 +1,22 @@
 version: 0.0
 os: linux
+
 files:
- - source: .
-   destination: /home/ec2-user/emily-acebook
+  - source: /
+    destination: /home/ec2-user/signal
 permissions:
-  - object: /home/ec2-user
+  - object: /
+    pattern: "**"
     owner: ec2-user
     group: ec2-user
-    type:
-      - directory
-      - file
 hooks:
-  ApplicationStart:
-    - location: scripts/reload-pm2.sh
+  BeforeInstall:
+    - location: aws_scripts/install_dependencies
       timeout: 300
-      runas: root
+      runas: ec2-user
+  ApplicationStart:
+    - location: aws_scripts/start_server
+      timeout: 3600
+  ApplicationStop:
+    - location: aws_scripts/stop_server
+      runas: ec2-user
