--- a/appspec.yml
+++ b/appspec.yml
@@ -9,14 +9,14 @@ permissions:
     pattern: "**"
     owner: ec2-user
     group: ec2-user
-hooks:
-  BeforeInstall:
-    - location: aws_scripts/install_dependencies
-      timeout: 300
-      runas: ec2-user
-  ApplicationStart:
-    - location: aws_scripts/start_server
-      timeout: 3600
-  ApplicationStop:
-    - location: aws_scripts/stop_server.bashrc
-      runas: ec2-user
+# hooks:
+#   BeforeInstall:
+#     - location: aws_scripts/install_dependencies
+#       timeout: 300
+#       runas: ec2-user
+#   ApplicationStart:
+#     - location: aws_scripts/start_server
+#       timeout: 3600
+#   ApplicationStop:
+#     - location: aws_scripts/stop_server.bashrc
+#       runas: ec2-user
