--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,53 +1,12 @@
-
-name: Pipeline
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+name: pipeline
+on: [push]
 jobs:
-  CI:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-        mongodb-version: ['4.0', '4.2', '4.4']
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-
-    - name: Start MongoDB
-      uses: supercharge/mongodb-github-action@1.6.0
-      with:
-        mongodb-version: ${{ matrix.mongodb-version }}
-
-    - name: Cypress run
-      uses: cypress-io/github-action@v2
-      with: 
-        start: npm run start:test
-        wait-on: http://localhost:3030
-
   deploy:
-    name: CD Pipeline
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8]
-        node-version: ['12.x']
-        appname: ['ef-acebook']
-        deploy-group: ['production']
-        s3-bucket: ['ef-s3-bucket']
-        s3-filename: ['production-ef-s3-bucket${{ github.sha }}']
-
+        node-version: [12.x, 14.x]
+        mongodb-version: ['4.0', '4.2', '4.4']
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -58,22 +17,16 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWSSECRET_KEY }}
         # aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }} # if you have/need it
         aws-region: eu-west-2
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.6.0
+      with:
+        mongodb-version: ${{ matrix.mongodb-version }}
+    - name: Copy files to the production website with the AWS CLI
+      run: | 
+        rm -rf node_modules
+        zip -r acebook.zip .
+        aws s3 cp ./acebook.zip s3://ef-s3-bucket/
 
-    - name: AWS Deploy push
-      run: |
-        aws deploy push \
-        --application-name ${{ matrix.appname }} \
-        --description "This is a revision for the ${{ matrix.appname }}-${{ github.sha }}" \
-        --ignore-hidden-files \
-        --s3-location s3://${{ matrix.s3-bucket }}/${{ matrix.s3-filename }}.zip \
-        --source .
-      # Create deployment to CodeDeploy
 
-    - name: AWS Create Deployment
-      run: |
-        aws deploy create-deployment \
-        --application-name ${{ matrix.appname }} \
-        --deployment-config-name CodeDeployDefault.OneAtATime \
-        --deployment-group-name ${{ matrix.deploy-group }} \
-        --file-exists-behavior OVERWRITE \
-        --s3-location bucket=${{ matrix.s3-bucket }},key=${{ matrix.s3-filename }}.zip,bundleType=zip \
+
+  
